Remove unsafe warning
Fixed
```
[warn] WARNING: A terminally deprecated method in sun.misc.Unsafe has been called
[warn] WARNING: sun.misc.Unsafe::objectFieldOffset has been called by com.oracle.truffle.api.dsl.InlineSupport$UnsafeField (file:/home/hubert/.cache/coursier/v1/https/repo1.maven.org/maven2/org/graalvm/truffle/truffle-api/24.2.0/truffle-api-24.2.0.jar)
[warn] WARNING: Please consider reporting this to the maintainers of class com.oracle.truffle.api.dsl.InlineSupport$UnsafeField
[warn] WARNING: sun.misc.Unsafe::objectFieldOffset will be removed in a future release
```